# DC_trading

./: README.md  pyproject.toml
learning/: agent.py  main.py  mcts.py  nnet.py  train.py  utils.py
learning/envs/: EURGBP0.25.csv  EURGBP0.5.csv  EURGBP1.0.csv  EURGBP1.5.csv  __init__.py  events.csv  test.ipynb  trading_v0.py
learning/workers/: __init__.py  duel_worker.py  execute_episode_worker.py  init_worker.py  predict_worker.py  schedule_worker.py  train_worker.py  update_worker.py
