[tool.poetry]
name = "plum-blossom"
version = "0.1.0"
description = ""
authors = ["ZQ1234ZQ <qzhaod@gmail.com>"]
packages = [
    { include = "learning" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
rich = "^12.5.1"
tensorflow = "2.9.2"
setproctitle = "^1.3.2"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
